--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "formik": "^2.2.6",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "sass": "^1.30.0"
+    "react-toastify": "^6.2.0",
+    "react-yup": "^1.19.2",
+    "sass": "^1.30.0",
+    "yup": "^0.32.8"
   }
 }
