--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
     "formik": "^2.2.6",
-    "mapbox-gl": "^2.0.0",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-mapbox-gl": "^5.1.1",
+    "react-map-gl": "^6.0.1",
     "react-toastify": "^6.2.0",
     "react-yup": "^1.19.2",
     "sass": "^1.30.0",
